--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "concurrently \"yarn:start:dev\" \"yarn:gen-typings\" \"yarn:prisma:generate\"",
+    "dev": "concurrently \"yarn:start:dev\" \"yarn:gen-typings\"",
     "start:dev": "nest start --watch",
     "gen-typings": "ts-node ./src/generate-typings",
-    "prisma:generate": "prisma generate --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -41,6 +40,7 @@
     "graphql": "^15.6.1",
     "graphql-iso-date": "^3.6.1",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prisma-nestjs-graphql": "^14.6.0",
     "reflect-metadata": "^0.1.13",
@@ -57,6 +57,7 @@
     "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
